[gd_scene load_steps=7 format=3 uid="uid://clb13xng636qw"]

[ext_resource type="Script" path="res://Scenes/UI/options_menu.gd" id="1_72def"]
[ext_resource type="AudioStream" uid="uid://c1hqiq726s4n6" path="res://Audio/gruntsOLD/grunt01.wav" id="2_i16kp"]
[ext_resource type="FontFile" uid="uid://dcau3l2p2lpje" path="res://Scenes/UI/Apple Chancery.ttf" id="3_3q1s0"]
[ext_resource type="Theme" uid="uid://c27qn5m30mvdr" path="res://Scenes/UI/main_theme.tres" id="4_r5juc"]

[sub_resource type="Theme" id="Theme_wpkeq"]
Button/font_sizes/font_size = 20
Button/fonts/font = ExtResource("3_3q1s0")
Label/font_sizes/font_size = 20
Label/fonts/font = ExtResource("3_3q1s0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdfnt"]
bg_color = Color(0.439049, 0.439049, 0.439049, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_72def")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i16kp")
bus = &"effects"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wpkeq")
color = Color(0.545098, 1, 1, 0.447059)

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -52.0
offset_right = 71.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kdfnt")

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Effects Volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer4" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "Mouse X Sensitivity"

[node name="MouseSensitivityXLabel" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.00"

[node name="MouseSensitivityXSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.01

[node name="VBoxContainer5" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
layout_mode = 2
text = "Mouse Y Sensitivity"

[node name="MouseSensitivityYLabel" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.00"

[node name="MouseSensitivityYSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.01

[node name="InvertYCheckBox" type="CheckBox" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Invert Y Look"

[node name="Label2" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "OPTIONS NEEDED:"

[node name="Label5" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "vsync"

[node name="BackButton" type="Button" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_r5juc")
text = "Back"
